feat(perfomance): added cuga lite interface to support perfomance
* working intiial v

* v2 working with followup and all variables well created

* feat: add demo applications (CRM, Email MCP, File System) (#110)

* feat(demo): added new demo to cli with crm application and filesystem

* feat(demo): added new email mcp app

* fix(demo): remove advanced queries

* feat(demo): added new email mcp app

---------

Co-authored-by: Offer Akrabi <offer.akrabi@il.ibm.com>

* v3 working

* remove cmr

* fixes

* feat: working v3

* chore: merge

* feat(lite): working new version

* feat(lite): combined tool provider

* feat: add sidepanel for variable management

* feat: fix sidepanel rendering

* feat: working version still need to address errors and finalize final answer

* fix: allow tool functions to accept positional arguments

- Modified tool_func signature from (**kwargs) to (*args, **kwargs)
- Added logic to map positional arguments to parameter names from schema
- Fixed TypeError when generated code calls tools with positional args
- Updated tool prompt formatting for better parameter documentation

* feat: extract code blocks from reasoning content when it contains python code

- Modified content extraction logic to check for ```python in reasoning content
- Prioritize reasoning content over response content when python code blocks are present
- Improves code extraction from models that put code in reasoning content

* fix: normalize API responses to match documented schema

- Added response normalization logic to wrap list responses in 'items' key when schema expects it
- Fixes KeyError when code expects arkansas_accounts['items'] but API returns list directly
- Maintains compatibility with existing response formats

* Revert "fix: normalize API responses to match documented schema"

This reverts commit 145b04746e72230fe910c161953480038b8420ce.

* docs(cuga-lite): clarify response schema documentation in tool prompts

- Added '- Response Schema:' label to distingu

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ node_modules
 /frontend/node_modules/
 experiment_results_*
 output_graphs
-*.egg-info
+docs/examples/demo_apps/email_mcp/mail_sink/buil
+*.egg-info/
 docs/examples/demo_apps/email_mcp/mail_sink/build
 docs/examples/demo_apps/email_mcp/mcp_server/build
 backup_*
