--- a/src/cuga/settings.toml
+++ b/src/cuga/settings.toml
@@ -16,6 +16,7 @@ memory_provider = "mem0"
 web_arena_eval = false
 use_vision = true
 use_paraphrase = false
+tracker_enabled = false
 use_location_resolver = false
 langfuse_tracing = false
 wxo_integration = false
@@ -24,6 +25,8 @@ mode = 'api'
 use_extension = false
 code_planner_enabled = true
 api_planner_hitl = false
+lite_mode = false  # Enable CugaLite for simple API tasks (faster execution)
+lite_mode_tool_threshold = 25  # Route to CugaLite if app has fewer than this many tools
 enable_memory = false
 enable_fact = false
 
