--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "cuga"
-version = "0.1.4"
+version = "0.1.5"
 description = "CUGA is an open-source generalist agent for the enterprise, supporting complex task execution on web and APIs, OpenAPI/MCP integrations, composable architecture, reasoning modes, and policy-aware features."
 readme = "README.md"
 license = "Apache-2.0"
@@ -54,6 +54,7 @@ cuga = [
     "configurations/**/*.toml",
     "configurations/**/*.md",
     "settings.toml",
+    "backend/**/*.jinja2",
 ]
 frontend_workspaces = [
     "frontend/dist/**",
