fix: fix save and reuse feature

--- a/src/cuga/settings.toml
+++ b/src/cuga/settings.toml
@@ -29,6 +29,7 @@ lite_mode = false  # Enable CugaLite for simple API tasks (faster execution)
 lite_mode_tool_threshold = 25  # Route to CugaLite if app has fewer than this many tools
 enable_memory = false
 enable_fact = false
+save_reuse_generate_html = false  # Generate HTML visualization for saved flows (disabled by default for performance)
 decomposition_strategy = "flexible"  # "exact" = one subtask per app, "flexible" = allows multiple subtasks per app
 
 
