feat: e2b sandbox working e2e with lite and balanced mode
---------

Signed-off-by: Harold Ship <harold@il.ibm.com>
Co-authored-by: Sami Marreed <sami.marreed@ibm.com>

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,9 @@
 # OPENROUTER_API_KEY="XXXXXX"
 # OPENROUTER_BASE_URL="https://openrouter.ai/api/v1"
 
+# For E2B Cloud Sandbox (optional - for remote code execution)
+# E2B_API_KEY="XXXXXX"  # Get your API key from https://e2b.dev/dashboard
+
 
 # OPTIONAL FOR DEMO MODE TO SAVE BOOKMARKS AND PASSWORDS INTO A PROFILE
 # MAC_USER_DATA_PATH="~/Library/Application Support/Google/Chrome/AgentS"
