--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "pyyaml>=6.0.3",
     "pymilvus>=2.6.4",
     "tavily-python",
+    "e2b-code-interpreter>=2.4.1",
 ]
 
 [project.optional-dependencies]
