--- a/src/cuga/settings.toml
+++ b/src/cuga/settings.toml
@@ -32,7 +32,12 @@ enable_fact = false
 save_reuse_generate_html = false  # Generate HTML visualization for saved flows (disabled by default for performance)
 decomposition_strategy = "flexible"  # "exact" = one subtask per app, "flexible" = allows multiple subtasks per app
 e2b_sandbox = false # use e2b for sandbox:
-e2b_sandbox_mode = "single"  # E2B sandbox lifecycle: "per-session" = cache per thread_id (default), "single" = shared sandbox for all threads, "per-call" = new sandbox each call
+e2b_sandbox_mode = "per-session"  # E2B sandbox lifecycle: "per-session" = cache per thread_id (default), "single" = shared sandbox for all threads, "per-call" = new sandbox each call
+e2b_sandbox_idle_ttl = 600  # Idle timeout in seconds (default: 10 min) - sandbox expires after this much idle time
+e2b_sandbox_max_age = 86400  # Max age for "single" mode in seconds (24h, 0 = disabled) - prevents week-old sandboxes
+e2b_sandbox_ttl_buffer = 60  # Safety buffer in seconds before E2B timeout (default: 60s)
+e2b_cleanup_on_create = true  # Run periodic cleanup when creating new sandboxes
+e2b_cleanup_frequency = 0  # Check all sandboxes every N get_or_create calls (0 = only on create)
 message_window_limit = 100  # Maximum number of messages to keep in history (sliding window)
 max_input_length = 5000  # Maximum characters allowed in user input (prevents abuse)
 
