--- a/src/frontend_workspaces/frontend/package.json
+++ b/src/frontend_workspaces/frontend/package.json
@@ -4,13 +4,14 @@
   "main": "main.js",
   "private": true,
   "type": "module",
-  "proxy": "https://localhost:8000",
+  "proxy": "https://localhost:7860",
   "description": "A basic example using @carbon/ai-chat as a web component.",
   "scripts": {
     "start": "DANGEROUSLY_DISABLE_HOST_CHECK=true webpack serve --config ./webpack.config.js",
     "start:win": "set DANGEROUSLY_DISABLE_HOST_CHECK=true&& webpack serve --config ./webpack.config.js",
     "build": "npx webpack --config ./webpack.config.js",
     "dev": "DANGEROUSLY_DISABLE_HOST_CHECK=true FAKE_STREAM=true webpack serve --config ./webpack.config.js --mode development",
+    "dev:real": "DANGEROUSLY_DISABLE_HOST_CHECK=true webpack serve --config ./webpack.config.js --mode development",
     "dev:win": "set DANGEROUSLY_DISABLE_HOST_CHECK=true&& set FAKE_STREAM=true&& webpack serve --config ./webpack.config.js --mode development",
     "dev:watch": "DANGEROUSLY_DISABLE_HOST_CHECK=true webpack serve --config ./webpack.config.js --mode development --watch",
     "dev:watch:win": "set DANGEROUSLY_DISABLE_HOST_CHECK=true&& webpack serve --config ./webpack.config.js --mode development --watch",
