--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ docs/examples/demo_apps/email_mcp/mail_sink/buil
 docs/examples/demo_apps/email_mcp/mail_sink/build
 docs/examples/demo_apps/email_mcp/mcp_server/build
 backup_*
+test_results.json
 vendor
 logs/
 dist_cuga
