--- a/src/cuga/settings.toml
+++ b/src/cuga/settings.toml
@@ -26,7 +26,8 @@ use_extension = false
 code_planner_enabled = true
 api_planner_hitl = false
 lite_mode = true  # Enable CugaLite for simple API tasks (faster execution)
-lite_mode_tool_threshold = 25  # Route to CugaLite if app has fewer than this many tools
+lite_mode_tool_threshold = 70  # Route to CugaLite if app has fewer than this many tools
+shortlisting_tool_threshold = 35  # Enable find_tools if total number of tools exceeds this threshold
 enable_memory = false
 enable_fact = false
 save_reuse_generate_html = false  # Generate HTML visualization for saved flows (disabled by default for performance)
@@ -40,17 +41,20 @@ e2b_cleanup_on_create = true  # Run periodic cleanup when creating new sandboxes
 e2b_cleanup_frequency = 0  # Check all sandboxes every N get_or_create calls (0 = only on create)
 message_window_limit = 100  # Maximum number of messages to keep in history (sliding window)
 max_input_length = 5000  # Maximum characters allowed in user input (prevents abuse)
+sub_task_keep_last_n = 5  # Number of most recent generated variables to keep when executing sub-tasks
+cuga_lite_max_steps = 20  # Maximum number of steps (call_model + sandbox cycles) before returning error
 
 
 [server_ports]
 registry = 8001
 # registry_host = "http://localhost:8001"  # Optional: Full registry URL. Falls back to "http://localhost:{registry}"
-# function_call_host = ""  # Optional: URL for E2B to call functions. Falls back to registry_host, then "http://localhost:8001"
+function_call_host = ""  # Optional: URL for E2B to call functions. Falls back to registry_host, then "http://localhost:8001"
 demo = 7860
 apis_url = 9000
 crm_api = 8007
 saved_flows = 8003
 environment_url = 8000
+filesystem_mcp = 8112
 digital_sales_api = 8000
 mcp_server = 8000
 petstore_api = 8081
