fix: enhancements and bugfixes to support benchmarks
1. Add tool execution timeout
2. add reflection task
3. choose path index on tool name

--- a/src/cuga/settings.toml
+++ b/src/cuga/settings.toml
@@ -31,6 +31,7 @@ shortlisting_tool_threshold = 35  # Enable find_tools if total number of tools e
 enable_todos = false  # Enable todos feature for complex multi-step task management
 enable_memory = false
 enable_fact = false
+reflection_enabled = false
 save_reuse_generate_html = false  # Generate HTML visualization for saved flows (disabled by default for performance)
 decomposition_strategy = "flexible"  # "exact" = one subtask per app, "flexible" = allows multiple subtasks per app
 e2b_sandbox = false # use e2b for sandbox:
@@ -45,7 +46,9 @@ max_input_length = 5000  # Maximum characters allowed in user input (prevents ab
 sub_task_keep_last_n = 5  # Number of most recent generated variables to keep when executing sub-tasks
 code_executor_keep_last_n = -1  # Number of variables to keep after code execution: -1 = keep all, 1 = keep last 1, 2 = keep last 2, etc.
 cuga_lite_max_steps = 25  # Maximum number of steps (call_model + sandbox cycles) before returning error
-
+path_segment_index = 1  # Which path segment to use for operation naming (1 = first, 2 = second, 3 = third)
+force_autonomous_mode = false
+tool_call_timeout = 30  # Timeout in seconds for tool/API calls (sandbox operations). If exceeded, raises TimeoutError
 
 [policy]
 enabled = true  # Enable policy system (intent guards, playbooks, tool guides, tool approvals)
