--- a/src/cuga/settings.toml
+++ b/src/cuga/settings.toml
@@ -27,6 +27,7 @@ code_planner_enabled = true
 api_planner_hitl = false
 lite_mode = true  # Enable CugaLite for simple API tasks (faster execution)
 lite_mode_tool_threshold = 70  # Route to CugaLite if app has fewer than this many tools
+force_lite_mode_apps = []  # List of app names to force into lite mode (e.g., ["app1", "app2"])
 shortlisting_tool_threshold = 35  # Enable find_tools if total number of tools exceeds this threshold
 enable_todos = false  # Enable todos feature for complex multi-step task management
 enable_memory = false
