--- a/src/cuga/settings.toml
+++ b/src/cuga/settings.toml
@@ -50,6 +50,7 @@ cuga_lite_max_steps = 25  # Maximum number of steps (call_model + sandbox cycles
 path_segment_index = 1  # Which path segment to use for operation naming (1 = first, 2 = second, 3 = third)
 force_autonomous_mode = false
 tool_call_timeout = 30  # Timeout in seconds for tool/API calls (sandbox operations). If exceeded, raises TimeoutError
+execution_output_max_length = 3500  # Maximum characters to show in execution output (prevents token overflow)
 
 [policy]
 enabled = true  # Enable policy system (intent guards, playbooks, tool guides, tool approvals)
@@ -61,6 +62,9 @@ embedding_provider = "local"  # "openai", "local", or "auto" (tries OpenAI, fall
 embedding_model = "all-MiniLM-L6-v2"  # Model name (default for local provider)
 embedding_dim = 384  # Embedding dimension (1536 for OpenAI, 384 for all-MiniLM-L6-v2)
 playbook_refine = false  # Enable playbook refinement based on user progress (requires LLM)
+filesystem_sync = true  # Enable filesystem sync (.cuga folder) for policies
+cuga_folder = ".cuga"  # Path to .cuga folder for policy files
+auto_load_policies = true  # Automatically load policies from .cuga folder on startup
 
 [server_ports]
 registry = 8001
