--- a/src/cuga/configurations/models/settings.rits.toml
+++ b/src/cuga/configurations/models/settings.rits.toml
@@ -79,3 +79,35 @@ url="http://localhost:4000"
 apikey_name = "RITS_API_KEY"
 temperature = 0.1
 max_tokens = 400
+
+[memory.mem0.model]
+platform = "rits"
+model_name = "rits/openai/gpt-oss-120b"
+url="http://localhost:4000"
+apikey_name = "RITS_API_KEY"
+temperature = 0.1
+max_tokens = 1000
+
+[memory.milvus.step_processing.model]
+platform = "rits"
+model_name = "rits/openai/gpt-oss-120b"
+url="http://localhost:4000"
+apikey_name = "RITS_API_KEY"
+temperature = 0.1
+max_tokens = 1000
+
+[memory.milvus.fact_extraction.model]
+platform = "rits"
+model_name = "rits/openai/gpt-oss-120b"
+url="http://localhost:4000"
+apikey_name = "RITS_API_KEY"
+temperature = 0.1
+max_tokens = 1000
+
+[memory.tips_extractor.model]
+platform = "rits"
+model_name = "rits/openai/gpt-oss-120b"
+url="http://localhost:4000"
+apikey_name = "RITS_API_KEY"
+temperature = 0.1
+max_tokens = 5000
