--- a/src/cuga/configurations/models/settings.watsonx.toml
+++ b/src/cuga/configurations/models/settings.watsonx.toml
@@ -58,3 +58,27 @@ platform = "watsonx"
 model_name = "meta-llama/llama-4-maverick-17b-128e-instruct-fp8"
 temperature = 0.1
 max_tokens = 2000
+
+[memory.mem0.model]
+platform = "watsonx"
+model_name = "meta-llama/llama-4-maverick-17b-128e-instruct-fp8"
+temperature = 0.1
+max_tokens = 1000
+
+[memory.milvus.step_processing.model]
+platform = "watsonx"
+model_name = "meta-llama/llama-4-maverick-17b-128e-instruct-fp8"
+temperature = 0.1
+max_tokens = 1000
+
+[memory.milvus.fact_extraction.model]
+platform = "watsonx"
+model_name = "meta-llama/llama-4-maverick-17b-128e-instruct-fp8"
+temperature = 0.1
+max_tokens = 1000
+
+[memory.tips_extractor.model]
+platform = "watsonx"
+model_name = "meta-llama/llama-4-maverick-17b-128e-instruct-fp8"
+temperature = 0.1
+max_tokens = 5000
